--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,107 +1,494 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+  @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@700&display=swap");
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    background-color: #0a0a23;
+    color: white;
+    padding: 0 20px;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.header-link {
+    color: white;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin: 0 10px;
+    transition: color 0.3s ease;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+.header-link:hover {
+    color: #ffd700;
+}
+
+
+.flyout {
+    color: white;
+}
+
+.flyout .header-link {
+    color: white;
+    text-decoration: none;
+    padding: 20px;
+}
+
+.custom-header {
+    min-width: 300px;
+    min-height: 300px;
+    background: '#0a0a23';
+    margin: 0;
+}
+
+/* homepage styling */
+@media screen and (min-width:600px) {
+  .background-img {
+    height: auto;
+    min-height: 300px;
+    width: 100%;
+}
   }
+
+
+
+.title {
+    color: white;
+    font-size: 6vw;
+    padding: 30px;
+    text-align: center;
 }
+
+.analytics-section {
+    align-items: center;
+    padding: 30px;
+    background-color: #EEECE6;
+}
+
+.benefit-section-wrapper {
+    padding: 40px;
+    height: inherit;
+}
+
+.benefit-left-section {
+    align-items: center;
+    padding-bottom: 50px;
+    max-width: 100%;
+}
+
+.benefit-left-section-mobile{
+  padding-bottom: 0;
+}
+
+.benefit-left-section-mobile h2{
+  font-size: 10vw;
+}
+
+.benefit-left-section h2 {
+    font-size: 3vw;
+    font-weight: 700;
+    text-align: center;
+    padding-bottom: 20px;
+}
+
+.benefit-left-section p {
+    font-size: 1.2vw;
+    text-align: center;
+}
+
+.benefit-content-wrapper {
+    max-width: 100%;
+}
+
+
+.benefit-content-section h2 {
+    text-align: center;
+    font-size: 1.5vw;
+    font-weight: 600;
+}
+
+.benefit-content-section p {
+    font-size: 1vw;
+    text-align: start;
+    padding-top: 10px;
+}
+
+.benefit-content-img {
+    height: 50px;
+    width: auto;
+    max-width: 60px;
+    border-radius: 50%;
+}
+
+.benefit-description{
+    display: none;
+}
+
+.benefit-content-flex-item:hover{
+    .benefit-description{
+        display: block;
+    }
+    .benefit-content-img{
+        display: none;
+    }
+    .benefit-content-section h2{
+        display: none;
+    }
+}
+.benefit-content-flex-item{
+    height: 180px;
+}
+
+
+
+
+.benefit-description {
+    font-size: 1.1vw;
+    text-align: center;
+}
+
+
+
+/* card style --- demo */
+
+  
+  .card {
+    width: 24rem;
+    height: 15rem;
+    border-radius: 10px;
+    overflow: hidden;
+    cursor: pointer;
+    position: relative;
+    color: white;
+    box-shadow: 0 10px 30px 5px rgba(0, 0, 0, 0.2);
+  
+    img {
+      position: absolute;
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      opacity: 0.9;
+      transition: opacity 0.2s ease-out;
+    }
+  
+    h2 {
+      position: absolute;
+      inset: auto auto 30px 30px;
+      margin: 0;
+      transition: inset 0.3s 0.3s ease-out;
+      font-family: "Roboto Condensed", sans-serif;
+      font-weight: normal;
+      text-transform: uppercase;
+    }
+    
+  
+    p,
+    a {
+      position: absolute;
+      opacity: 0;
+      max-width: 80%;
+      transition: opacity 0.3s ease-out;
+    }
+  
+    p {
+      inset: auto auto 80px 30px;
+    }
+  
+    a {
+      inset: auto auto 40px 30px;
+      color: inherit;
+      text-decoration: none;
+    }
+  
+    &:hover h2 {
+      inset: auto auto 30px -300px;
+      padding-bottom: 10px;
+      transition: inset 0.4s ease-out;
+    }
+  
+    &:hover p,
+    &:hover a {
+      opacity: 1;
+      transition: opacity 0.5s 0.1s ease-in;
+    }
+  
+    &:hover img {
+      transition: opacity 0.3s ease-in;
+      opacity: 1;
+    }
+  }
+  
+  .material-symbols-outlined {
+    vertical-align: middle;
+  }
+  
+
+
+
+
+h2 {
+    font-size: 2.25rem;
+    font-family: var(--font-title);
+    color: var(--white);
+    line-height: 1.1;
+  }
+  
+  p {
+    font-family: var(--font-text);
+    font-size: 1rem;
+    line-height: 1.5;
+    color: var(--white);
+  }
+  
+  .flow > * + * {
+    margin-top: var(--flow-space, 1em);
+  }
+  
+  /* CARD COMPONENT */
+  
+  .card {
+    display: grid;
+    place-items: center;
+    width: 80vw;
+    max-width: 21.875rem;
+    border-radius: 0.625rem;
+    box-shadow: 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.25);
+  }
+
+  .card-mobile{
+    max-width: 100%;
+  }
+  
+  
+  .card__background {
+    object-fit: cover;
+    max-width: 100%;
+    height: 100%;
+  }
+  
+  .card__content {
+    --flow-space: 0.9375rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-self: flex-end;
+    height: 55%;
+    padding: 12% 1.25rem 1.875rem;
+    background: linear-gradient(
+      180deg,
+      hsla(0, 0%, 0%, 0) 0%,
+      hsla(0, 0%, 0%, 0.3) 10%,
+      hsl(0, 0%, 0%) 100%
+    );
+  }
+  
+  .card__content--container {
+    --flow-space: 1.25rem;
+  }
+.card__content--container p{
+  text-align: left;
+}
+
+.card__content--container h2{
+  font-weight: bolder;
+}
+  
+  .card__title {
+    position: relative;
+    width: fit-content;
+    width: -moz-fit-content; 
+    font-size: 1.1vw;
+  }
+  
+  .card__title::after {
+    position: absolute;
+    height: 0.3125rem;
+    width: calc(100% + 1.25rem);
+    bottom: calc((1.25rem - 0.5rem) * -1);
+    left: -1.25rem;
+    background-color: var(--brand-color);
+    font-weight: 800;
+  }
+  
+  .card__button {
+    padding: 0.75em 1.6em;
+    width: fit-content;
+    width: -moz-fit-content; 
+    font-variant: small-caps;
+    font-weight: bold;
+    border-radius: 0.45em;
+    border: none;
+    background-color: var(--brand-color);
+    font-family: var(--font-title);
+    font-size: 1.125rem;
+    color: var(--black);
+  }
+  
+  .card__button:focus {
+    outline: 2px solid black;
+    outline-offset: -5px;
+  }
+  
+  @media (any-hover: hover) and (any-pointer: fine) {
+  
+    .card__title::after {
+      opacity: 0;
+      transform: scaleX(0);
+      transform-origin: right;
+    }
+
+  
+    .card__content--container > :not(.card__title),
+    .card__button {
+      opacity: 0;
+    }
+  
+    .card:hover,
+    .card:focus-within {
+      transform: scale(1.05);
+    }
+  
+    .card:hover .card__content,
+    .card:focus-within .card__content {
+      transform: translateY(0);
+    }
+
+  
+    .card:focus-within .card__content {
+      transition-duration: 0ms;
+      background:black;
+    }
+  
+    .card:hover .card__background,
+    .card:focus-within .card__background {
+      transform: scale(2);
+      filter: blur(2px);
+      -webkit-filter: blur(10px);
+    }
+
+    .card:hover .card__content--container > :not(.card__title),
+    .card:hover .card__button,
+    .card:focus-within .card__content--container > :not(.card__title),
+    .card:focus-within .card__button {
+      opacity: 1;
+    }
+
+    .card:hover .card__title::after,
+    .card:focus-within .card__title::after {
+      opacity: 1;
+      transform: scaleX(1);
+      transform-origin: left;     
+    }
+  }
+  
+  .custom-flex-item{
+    max-height: 300px;
+  }
+
+  .card__description{
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: -50px;
+    justify-content: center;
+    width: auto;
+  }
+  
+
+  /* benefit slider */
+  .benefit-slider {
+    width: 100%;
+    padding: 20px;
+  }
+  
+  .benefit-card-wrapper {
+    display: flex;
+    margin:auto;
+    justify-content: end;
+    align-items: right;
+    height: 100%;
+  }
+  
+  .benefit-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent !important;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    color: white !important;
+  }
+
+  /* bookingform style */
+  .contactPanel {
+    background-color: #21252b;
+    color: white;
+    padding: 20px;
+    border-radius: 8px;
+  }
+  
+
+/* mobile view analytics and window view analytics */
+
+@media screen and (max-width:760px) {
+  #mobile_view_analytics{
+    display: block;
+  }
+
+  #window_view_analytics{
+    display: none;
+  }
+
+  #benefit_mobile_view{
+    display: block;
+  }
+
+  #benefit_window_view{
+    display: none;
+  }
+
+  #window-pricing h2{
+    font-size: 30px;
+  }
+
+  .subtitle{
+    color: #909090;
+    font-size: 20px;
+    text-align: center;
+}
+  
+}
+
+@media screen and (min-width:759px) {
+  #mobile_view_analytics{
+    display: none;
+  }
+
+  #window_view_analytics{
+    display: block;
+  }
+
+  #benefit_mobile_view{
+    display: none;
+  }
+
+  #benefit_window_view{
+    display: block;
+  }
+
+  .subtitle{
+    color: #909090;
+    font-size: 3vw;
+    text-align: left;
+    margin-left: 160px;
+    padding-top: 50px;
+    margin-top: -150px;
+}
+}
+
