--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -209,9 +209,9 @@ body {
     }
   
     &:hover h2 {
-      inset: auto auto 30px -300px;
+      inset: auto auto 30px -500px;
       padding-bottom: 10px;
-      transition: inset 0.4s ease-out;
+      transition: inset 0.5s ease-out;
     }
   
     &:hover p,
@@ -261,6 +261,11 @@ h2 {
     max-width: 21.875rem;
     border-radius: 0.625rem;
     box-shadow: 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.25);
+    background: linear-gradient(10deg, rgb(222, 179, 98), black);
+  
+    background: linear-gradient(145deg, #333333, #6c6b6b);
+  border-radius: 15px;
+  color: white;
   }
 
   .card-mobile{
@@ -305,7 +310,7 @@ h2 {
     position: relative;
     width: fit-content;
     width: -moz-fit-content; 
-    font-size: 1.1vw;
+    font-size: 1.6vw;
   }
   
   .card__title::after {
