--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -159,7 +159,8 @@ body {
 
   
   .card {
-    width: 24rem;
+    /* width: 24rem; */
+    width: fit-content;
     height: 15rem;
     border-radius: 10px;
     overflow: hidden;
@@ -199,7 +200,7 @@ body {
     }
   
     p {
-      inset: auto auto 80px 30px;
+      inset: auto auto 5vw 30px;
     }
   
     a {
@@ -255,9 +256,7 @@ h2 {
   /* CARD COMPONENT */
   
   .card {
-    display: grid;
-    place-items: center;
-    width: 80vw;
+    width: 20vw;
     max-width: 21.875rem;
     border-radius: 0.625rem;
     box-shadow: 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.25);
@@ -268,9 +267,48 @@ h2 {
   color: white;
   }
 
+  .benefit-card-wrapper-mobile {
+    position: relative;
+    width: 100%; 
+    height: 250px;
+    overflow: hidden;
+}
+
   .card-mobile{
     max-width: 100%;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: #fff;
   }
+
+  .card-mobile > div {
+    position: relative;
+    z-index: 1; 
+    padding: 20px;
+}
+
+.card__background-mobile {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; 
+  z-index: -1; 
+}
+
+.card-mobile h3 {
+    margin: 0;
+    font-size: 24px; 
+    font-weight: bold;
+    color: orange;
+    line-height: 1.5;
+}
   
   
   .card__background {
@@ -279,31 +317,14 @@ h2 {
     height: 100%;
   }
   
-  .card__content {
-    --flow-space: 0.9375rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-self: flex-end;
-    height: 55%;
-    padding: 12% 1.25rem 1.875rem;
-    background: linear-gradient(
-      180deg,
-      hsla(0, 0%, 0%, 0) 0%,
-      hsla(0, 0%, 0%, 0.3) 10%,
-      hsl(0, 0%, 0%) 100%
-    );
-  }
   
-  .card__content--container {
-    --flow-space: 1.25rem;
-  }
+
 .card__content--container p{
   text-align: left;
 }
 
 .card__content--container h2{
-  font-weight: bolder;
+  font-weight: bold;
 }
   
   .card__title {
@@ -323,25 +344,6 @@ h2 {
     font-weight: 800;
   }
   
-  .card__button {
-    padding: 0.75em 1.6em;
-    width: fit-content;
-    width: -moz-fit-content; 
-    font-variant: small-caps;
-    font-weight: bold;
-    border-radius: 0.45em;
-    border: none;
-    background-color: var(--brand-color);
-    font-family: var(--font-title);
-    font-size: 1.125rem;
-    color: var(--black);
-  }
-  
-  .card__button:focus {
-    outline: 2px solid black;
-    outline-offset: -5px;
-  }
-  
   @media (any-hover: hover) and (any-pointer: fine) {
   
     .card__title::after {
@@ -350,23 +352,6 @@ h2 {
       transform-origin: right;
     }
 
-  
-    .card__content--container > :not(.card__title),
-    .card__button {
-      opacity: 0;
-    }
-  
-    .card:hover,
-    .card:focus-within {
-      transform: scale(1.05);
-    }
-  
-    .card:hover .card__content,
-    .card:focus-within .card__content {
-      transform: translateY(0);
-    }
-
-  
     .card:focus-within .card__content {
       transition-duration: 0ms;
       background:black;
@@ -396,6 +381,7 @@ h2 {
   
   .custom-flex-item{
     max-height: 300px;
+    max-width: fit-content;
   }
 
   .card__description{
@@ -407,9 +393,9 @@ h2 {
   }
   
 
-  /* benefit slider */
   .benefit-slider {
     width: 100%;
+    height: auto;
     padding: 20px;
   }
   
@@ -426,7 +412,7 @@ h2 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: transparent !important;
+    /* background-color: transparent !important; */
     border: 1px solid rgba(255, 255, 255, 0.2);
     color: white !important;
   }
@@ -442,7 +428,7 @@ h2 {
 
 /* mobile view analytics and window view analytics */
 
-@media screen and (max-width:760px) {
+@media screen and (max-width:1031px) {
   #mobile_view_analytics{
     display: block;
   }
@@ -468,10 +454,14 @@ h2 {
     font-size: 20px;
     text-align: center;
 }
+
+.card{
+  width: auto;
+}
   
 }
 
-@media screen and (min-width:759px) {
+@media screen and (min-width:1030px) {
   #mobile_view_analytics{
     display: none;
   }
