add image for benefit, add footer

--- a/src/styles/Pricing.module.css
+++ b/src/styles/Pricing.module.css
@@ -7,6 +7,7 @@
     margin-bottom: 20px;
     max-height: max-content;
     align-items: start;
+    background-color: transparent;
   }
   
   .tech_item {
