--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -58,7 +58,7 @@
 
   .title {
     color: white;
-    font-size: 6vw;
+    font-size: 5vw;
     padding: 30px;
     text-align: center;
   }
@@ -147,27 +147,18 @@
   }
 
 
-
-
   .benefit-description {
     font-size: 1.1vw;
     text-align: center;
   }
 
-
-
-  /* card style --- demo */
-
-
   .card {
-    /* width: 24rem; */
     width: fit-content;
     height: 15rem;
     border-radius: 10px;
     overflow: hidden;
     cursor: pointer;
     position: relative;
-    /* color: white; */
     box-shadow: 0 10px 30px 5px rgba(0, 0, 0, 0.2);
 
     img {
@@ -183,9 +174,9 @@
 
     h2 {
       position: absolute;
-      inset: auto auto 30px 30px;
+      inset: auto auto 0px auto;
       margin: 0;
-      transition: inset 0.3s 0.3s ease-out;
+      transition: inset 0.3s 0.3s ease-in;
       font-family: "Roboto Condensed", sans-serif;
       text-transform: uppercase;
       background-color: black;
@@ -193,7 +184,7 @@
       box-shadow: #87cedd 0 10px 20px 0;
       background-color: rgba(0, 0, 0, 0.5);
       backdrop-filter: blur(2px);
-      border-radius: 10px;
+      border-radius: 0px;
       padding: 10px;
       text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
       font-size: 18px;
@@ -204,6 +195,11 @@
       position: absolute;
       opacity: 0;
       max-width: 80%;
+      font-size: 1rem;
+      max-height: 90%;
+      overflow: auto;
+      scrollbar-width: none;
+      text-align: center;
       transition: opacity 0.3s ease-out;
       color: black;
       box-shadow: #87cedd 0 10px 20px 0;
@@ -219,12 +215,6 @@
       inset: auto auto auto 30px;
     }
 
-    a {
-      inset: auto auto 40px 30px;
-      color: inherit;
-      text-decoration: none;
-    }
-
     &:hover h2 {
       inset: auto auto 30px -500px;
       padding-bottom: 10px;
@@ -236,6 +226,7 @@
       opacity: 1;
       transition: opacity 0.5s 0.1s ease-in;
     }
+
 
     &:hover img {
       transition: opacity 0.3s ease-in;
@@ -256,9 +247,8 @@
 
   p {
     font-family: var(--font-text);
-    font-size: 1rem;
-    line-height: 1.5;
-    color: var(--white);
+    font-size: 0.1rem;
+    line-height: 1.4;
   }
 
   .flow>*+* {
@@ -280,7 +270,7 @@
     font-weight: 500;
     text-align: center;
     justify-content: center;
-    width: auto;  
+    width: auto;
   }
 
 
@@ -414,7 +404,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* background-color: transparent !important; */
     border: 1px solid rgba(255, 255, 255, 0.2);
     color: white !important;
   }
@@ -429,7 +418,6 @@
 
 
   /* mobile view analytics and window view analytics */
-
   @media screen and (max-width:1031px) {
     #mobile_view_analytics {
       display: block;
@@ -454,7 +442,8 @@
     .subtitle {
       color: #909090;
       font-size: 20px;
-      text-align: center;
+      text-align: left;
+      margin-left: 50px;
     }
 
     .card {
@@ -484,8 +473,42 @@
       color: #909090;
       font-size: 3vw;
       text-align: left;
-      margin-left: 160px;
+      margin-left: 50px;
       padding-top: 50px;
-      margin-top: -150px;
+      margin-top: -150px
     }
+  }
+
+
+  .title-wrap {
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+    border: 2px solid black;
+  }
+
+
+  .background-img {
+    width: 100%;
+    height: auto;
+    display: block;
+    filter: brightness(80%);
+  }
+
+  .title-wrap {
+    background-color: black;
+    color: white;
+    padding: 20px;
+    position: relative;
+    z-index: 1;
+  }
+
+  .image-container {
+    position: relative;
+  }
+
+  .image-overlay {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+    background: linear-gradient(to bottom, transparent, black);
   }
