major update of all the things

--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -1,7 +1,7 @@
 .footer {
   padding: 20px;
   background-color: transparent;
-  background-color: #DDDBD5;
+  background-color: black;
   background-position: 0% 100%;
   background-size: 100% 200px;
   color: #6b6a6a;
