--- a/src/styles/FabButton.module.css
+++ b/src/styles/FabButton.module.css
@@ -4,10 +4,7 @@
     height: 50px;
     bottom: 40px;
     right: 40px;
-    background-color: #25d366;
-    border-radius: 50px;
-    text-align: center;
-    box-shadow: 2px 2px 3px #999;
+    background-color: transparent;
     z-index: 1000;
     display: flex;
     align-items: center;
@@ -19,10 +16,19 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 50%;
+    border-radius: 90%;
   }
   
-  .fabButton:hover {
-    background-color: #128c7e;
-  }
-  
+
+.fabButton:hover {
+    animation: jump 0.6s ease-in-out;
+}
+
+@keyframes jump {
+    0%, 100% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-20px);
+    }
+}
