--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -154,16 +154,16 @@
 
   .card {
     width: fit-content;
-    height: 15rem;
+    height: 209.8px;
     border-radius: 10px;
     overflow: hidden;
     cursor: pointer;
     position: relative;
-    box-shadow: 0 10px 30px 5px rgba(0, 0, 0, 0.2);
+    /* box-shadow: 0 10px 30px 5px rgba(0, 0, 0, 0.2); */
 
     img {
       position: absolute;
-      object-fit: cover;
+      object-fit: fill;
       width: 100%;
       height: 100%;
       top: 0;
@@ -195,20 +195,17 @@
       position: absolute;
       opacity: 0;
       max-width: 80%;
-      font-size: 1rem;
+      font-weight: lighter;
       max-height: 90%;
       overflow: auto;
       scrollbar-width: none;
       text-align: center;
-      transition: opacity 0.3s ease-out;
-      color: black;
-      box-shadow: #87cedd 0 10px 20px 0;
+      transition: opacity 0.1s ease-out;
+      color: white;
       justify-content: center;
-      background-color: rgba(0, 0, 0, 0.1);
-      backdrop-filter: blur(2px);
+      background-color: rgba(0, 0, 0);
       border-radius: 20px;
       padding: 10px;
-      text-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
 
     p {
@@ -224,7 +221,7 @@
     &:hover p,
     &:hover a {
       opacity: 1;
-      transition: opacity 0.5s 0.1s ease-in;
+      transition: opacity 0.2s 0.1s ease-in;
     }
 
 
@@ -260,8 +257,9 @@
     width: 20vw;
     max-width: 21.875rem;
     border-radius: 0.625rem;
-    box-shadow: 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.25);
-    background: linear-gradient(145deg, #333333, #6c6b6b);
+    /* box-shadow: 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.25); */
+    /* background: linear-gradient(145deg, #333333, #6c6b6b); */
+    background-color: black;
     border-radius: 15px;
     color: white;
   }
@@ -358,9 +356,10 @@
 
     .card:hover .card__background,
     .card:focus-within .card__background {
-      transform: scale(2);
+      /* transform: scale(2);
       filter: blur(2px);
-      -webkit-filter: blur(10px);
+      -webkit-filter: blur(10px); */
+      display: none;
     }
 
     .card:hover .card__content--container> :not(.card__title),
@@ -415,6 +414,13 @@
 
   /* mobile view analytics and window view analytics */
   @media screen and (max-width:1031px) {
+    #menu-icon{
+      display: block;
+    }
+
+    #menu-items{
+      display: none;
+    }
     #mobile_view_analytics {
       display: block;
     }
@@ -449,6 +455,14 @@
   }
 
   @media screen and (min-width:1030px) {
+    #menu-icon{
+      display: none;
+    }
+
+    #menu-items{
+      display: flex;
+    }
+
     #mobile_view_analytics {
       display: none;
     }
