--- a/src/styles/PricingMobile.module.css
+++ b/src/styles/PricingMobile.module.css
@@ -198,7 +198,6 @@
 
 
 /* for web */
-
 .itStaffAugmentationService {
     padding: 20px;
     max-width: fit-content;
@@ -254,3 +253,54 @@
   justify-content: space-between;
   align-items: center;
 }
+
+#pricingPanel{
+    min-height: 300px;
+    background-color: transparent;
+    border: 0.2px ridge orange;
+    box-shadow: 0.15rem 0.15rem 0.4rem rgba(255, 166, 0, 0.405);
+}
+
+
+#pricingPanel {
+    user-select: none;
+    max-width: 200px;
+    margin: 0 auto;
+    border: 1px solid orange;
+    background-color: orange;
+    background: linear-gradient(0deg, rgba(255, 255, 255, 0.666) 0%, rgba(202, 202, 202, 0.5) 100%);
+    box-shadow: 0 7px 20px 1px #00000088;
+    border-radius: 0.7rem;
+    backdrop-filter: blur(7px);
+    -webkit-backdrop-filter: blur(7px);
+    overflow: hidden;
+    transition: 0.5s all;
+    color: red;
+  }
+  
+  #pricingPanel::before {
+    position: fixed;
+    content: "";
+    box-shadow: 0 0 100px 40px #ffffffe5;
+    top: -10%;
+    left: -100%;
+    transform: rotate(-45deg);
+    height: 60rem;
+    transition: 0.7s all;
+  }
+  
+p#ricingPanel:hover {
+    border: 1px solid #f7f3f3ea;
+    box-shadow: 0 7px 50px 10px #ffffff;
+    transform: scale(1.015);
+    filter: brightness(100%);
+  }
+  
+  #pricingPanel:hover::before {
+    filter: brightness(1);
+    top: -100%;
+    left: 200%;
+  }
+  
+
+
