--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -159,11 +159,10 @@
     overflow: hidden;
     cursor: pointer;
     position: relative;
-    /* box-shadow: 0 10px 30px 5px rgba(0, 0, 0, 0.2); */
 
     img {
       position: absolute;
-      object-fit: fill;
+      object-fit: cover;
       width: 100%;
       height: 100%;
       top: 0;
@@ -257,8 +256,8 @@
     width: 20vw;
     max-width: 21.875rem;
     border-radius: 0.625rem;
-    /* box-shadow: 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.25); */
-    /* background: linear-gradient(145deg, #333333, #6c6b6b); */
+    box-shadow: 0.25rem 0.25rem 0.5rem rgba(255, 165, 0, 0.35);
+    border: 1.5px ridge rgba(255, 166, 0);
     background-color: black;
     border-radius: 15px;
     color: white;
@@ -501,6 +500,8 @@
     height: auto;
     display: block;
     filter: brightness(80%);
+    padding-top: 50px;
+    background-color: black;
   }
 
   .title-wrap {
